--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <p class="site-description">Description du TP</p>
       <nav class="banner-nav">
       <a href="#">Un lien</a>
+      <a href="contact.html">Contact</a>
       </nav>
     </header>
   <main>
