--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,9 @@
       <a class="site-logo" href="./">Formulaire</a>
       <p class="site-description">Les différents champs de saisie</p>
       <nav class="banner-nav">
-        <a href="#">Un lien</a>
-          <a href="contact.html">Contact</a>
+        <a href="index.html"><img src="gretaprovence.png" /></a>
+        <a href="index.html">Accueil</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </header>
 
