--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <a class="site-logo" href="./">Titre du TP</a>
       <p class="site-description">Description du TP</p>
       <nav class="banner-nav">
-      <a href="#">Un lien</a>
+      <a href="index.html"><img src="gretaprovence.png" /></a>
+      <a href="index.html">Accueil</a>
       <a href="contact.html">Contact</a>
       </nav>
     </header>
